# PythonTemplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  initialize-project.sh  main.py  pyproject.toml  setup.sh
.github/workflows/: tests.yml
src/: ui.py
test/: test.py
tests/: test_main.py
