[tool.poetry]
name = "pythontemplate"
version = "0.1.0"
description = ""
authors = ["Samuel Lowe <samlowe106@gmail.com>"]
readme = "README.md"
license = "LICENSE"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.0"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
